--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ body {
   color: var(--color-stone-light);
 }
 
+.hidden {
+  display: none !important;
+}
+
 .container {
   max-width: 85vw;
   margin: 0 auto;
